# dev_planing_agent

./: .gitignore  README.md  pyproject.toml  requirements.txt
planagent/: cli.py  context_reader.py  conversation_manager.py  conversation_store.py  llm.py  output_writer.py  plan_generator.py  plan_manager.py  state.py  ui.py
planagent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
planagent/guardrails/: config.yml  guard.py  rails.co
planagent/knowledge/: __init__.py  build_index.py  chunker.py  embedder.py  memory.py  prebuild.py  retriever.py  vectorstore.py
planagent/knowledge/prebuilt/: chunks.json  embeddings.npy
planagent/knowledge/sources/: ai_native_system_design.txt  architecture_patterns.txt  core_hld_concepts.txt  design_strategies.txt  mlops_ai_lifecycle.txt  system_design_levels.txt
planagent/prompts/: system_prompt.txt
tests/: test_context_reader.py  test_conversation_store.py  test_knowledge.py  test_plan_manager.py  test_ui.py
