[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "planagent"
version = "0.1.0"
description = "A CLI tool for generating project plans using LLMs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "langgraph",
    "langchain",
    "langchain-community",
    "litellm",
    "typer",
    "rich",
    "pathspec",
    "python-dotenv",
    "pytest",
]

[project.scripts]
planagent = "planagent.cli:app"